Update CamSniff package and enhance web interface
- Updated debian/control to use debhelper-compat and increased Standards-Version to 4.7.0.
- Changed dependencies from avahi-discover to avahi-utils and added python3-flask.
- Revised package description for clarity and removed redundant features.
- Fixed copyright file formatting issues.
- Streamlined post-install and post-remove scripts for better readability.
- Added new source format file for native packaging.
- Enhanced env_setup.sh with additional configuration options for IoT enumeration and scanning.
- Updated install_deps.sh to include new dependencies and improved pip installation.
- Introduced iot_enumerate.sh for IoT device enumeration and discovery.
- Refined scan_analyze.sh to improve logging and analysis features.
- Implemented a new Flask web application (web/app.py) for real-time camera status and reporting.
- Created webui.sh to manage the web application environment and dependencies.
- Added a new directory structure for web output and reports.

--- a/camsniff.1
+++ b/camsniff.1
@@ -1,6 +1,6 @@
-.TH CAMSNIFF 1 "July 2025" "CamSniff 1.0.1" "User Commands"
+.TH CAMSNIFF 1 "July 2025" "CamSniff 1.0.2" "User Commands"
 .SH NAME
-camsniff \- Enhanced Camera Reconnaissance Tool
+camsniff \-  Camera Reconnaissance Tool
 .SH SYNOPSIS
 .B camsniff
 [\fIOPTIONS\fR]
@@ -8,7 +8,7 @@ camsniff \- Enhanced Camera Reconnaissance Tool
 .B CamSniff
 is a powerful reconnaissance tool designed for security professionals and researchers. It specializes in identifying and analyzing IP cameras and other network devices, providing deep insights into their configuration and vulnerabilities.
 
-The tool performs comprehensive network reconnaissance including device discovery, IP camera detection, RTSP stream identification, CVE vulnerability checking, SNMP enumeration, and web interface discovery.
+The tool performs  network reconnaissance including device discovery, IP camera detection, RTSP stream identification, CVE vulnerability checking, SNMP enumeration, and web interface discovery.
 
 .SH OPTIONS
 .TP
