--- a/camsniff.1
+++ b/camsniff.1
@@ -71,7 +71,7 @@ Report bugs to: <john@on1.no>
 CamSniff home page: <https://github.com/John0n1/CamSniff>
 
 .SH COPYRIGHT
-Copyright \(C\) 2025 John H. Mitander.
+Copyright (C) 2025 John H. Mitander.
 .br
 This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
