--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,31 @@
+(1.0.4-1) unstable; urgency=medium
+
+  * Add CamSniff executable alongside camsniff
+  * Install desktop entry and icon; use PNG when icotool available
+  * Harden installer venv handling; add typer to requirements
+  * Structured JSON logging and minor UX improvements
+
+ -- John H. Mitander <john@on1.no>  Thu, 11 Sep 2025 21:50:00 +0000
+
+camsniff (1.0.2-1) unstable; urgency=medium
+
+  * Enable all features by default in configuration
+  * Add Web UI and IoT enumeration dependencies to debian/control
+  * Improve SNMP temp file handling for non-root runs
+  * Keep Makefile default config in sync with env_setup
+  * Switch to debhelper-compat (= 12) and set Rules-Requires-Root: no
+  * Add debian/source/format (3.0 native); bump Standards-Version 4.7.0
+  * Harden banner animations for non-TTY environments
+
+ -- John H. Mitander <john@on1.no>  Tue, 19 Aug 2025 10:42:00 +0000
+
+camsniff (1.0.1-1) unstable; urgency=medium
+
+  * Initial Debian package release
+  *  camera reconnaissance tool
+  * CVE vulnerability checking integration
+  * RTSP stream
+
 camsniff (1.0.3-1) unstable; urgency=medium
 
   * Add capitalized CamSniff executable alongside camsniff
