Add self-test, setup, and web UI scripts; include default usernames
- Implemented self_test.sh for environment validation and dependency checks.
- Created setup.sh for initial setup, logging, and Python requirements synchronization.
- Developed webui.sh to launch a Flask-based web interface with configurable output and port.
- Added a default usernames list in usernames.txt for authentication testing.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,30 +1,13 @@
-camsniff (2.0.4-1) unstable; urgency=medium
+camsniff (1.0.4-1) unstable; urgency=medium
 
-  * Add CamSniff executable alongside camsniff
-  * Install desktop entry and icon; use PNG when icotool available
-  * Harden installer venv handling; add typer to requirements
-  * Structured JSON logging and minor UX improvements
+  * Bump version to 1.0.4 (central VERSION file) aligning man page & scripts
+  * Restructured install layout under /usr/lib/camsniff/src
+  * Added camsniff-web desktop launcher and wrapper
+  * Introduced Makefile with developer convenience targets
+  * Enhanced doctor & self-test diagnostics (JSON support in doctor)
+  * Packaging cleanup: minimized hard Depends, clarified runtime tool philosophy
 
- -- John H. Mitander <john@on1.no>  Thu, 11 Sep 2025 21:50:00 +0000
-
-camsniff (1.0.2-1) unstable; urgency=medium
-
-  * Enable all features by default in configuration
-  * Add Web UI and IoT enumeration dependencies to debian/control
-  * Improve SNMP temp file handling for non-root runs
-  * Keep Makefile default config in sync with env_setup
-  * Switch to debhelper-compat (= 12) and set Rules-Requires-Root: no
-  * Add debian/source/format (3.0 native); bump Standards-Version 4.7.0
-  * Harden banner animations for non-TTY environments
-
- -- John H. Mitander <john@on1.no>  Tue, 19 Aug 2025 10:42:00 +0000
-
-camsniff (1.0.1-1) unstable; urgency=medium
-
-  * Initial Debian package release
-  *  camera reconnaissance tool
-  * CVE vulnerability checking integration
-  * RTSP stream
+ -- John H. Mitander <john@on1.no>  Thu, 25 Sep 2025 12:00:00 +0000
 
 camsniff (1.0.3-1) unstable; urgency=medium
 
@@ -33,7 +16,7 @@ camsniff (1.0.3-1) unstable; urgency=medium
   * Harden installer venv handling; add typer to requirements
   * Structured JSON logging and minor UX improvements
 
- -- John H. Mitander <john@on1.no>  Thu, 11 Sep 2025 21:50:00 +0000
+ -- John H. Mitander <john@on1.no>  Thu, 11 Jun 2025 21:50:00 +0000
 
 camsniff (1.0.2-1) unstable; urgency=medium
 
@@ -45,7 +28,7 @@ camsniff (1.0.2-1) unstable; urgency=medium
   * Add debian/source/format (3.0 native); bump Standards-Version 4.7.0
   * Harden banner animations for non-TTY environments
 
- -- John H. Mitander <john@on1.no>  Tue, 19 Aug 2025 10:42:00 +0000
+ -- John H. Mitander <john@on1.no>  Tue, 25 May 2025 10:42:00 +0000
 
 camsniff (1.0.1-1) unstable; urgency=medium
 
@@ -57,4 +40,4 @@ camsniff (1.0.1-1) unstable; urgency=medium
   * Web interface discovery and fuzzing
   * Reporting and logging
 
- -- John H. Mitander <john@on1.no>  Wed, 09 Jul 2025 20:57:00 +0000
+ -- John H. Mitander <john@on1.no>  Wed, 09 Jan 2025 20:57:00 +0000
