feat: Enhance camera reconnaissance toolkit with new features and scripts
- Updated mode-config.sh to include new configuration options for ONVIF probing, SSDP, HTTP metadata, and follow-up service scans based on selected modes.
- Added onvif_device_info.py to parse ONVIF GetDeviceInformation SOAP responses and extract device details.
- Introduced port-profiles.sh to define various port profiles for Nmap and Masscan, along with suggested RTSP brute-force thread counts.
- Created profile_resolver.py to resolve camera/profile hints based on discovery artifacts, including catalog loading and matching logic.
- Developed rtsp_stream_summary.py to summarize ffprobe output for RTSP streams.
- Implemented ssdp_probe.py for performing multicast SSDP discovery sweeps and capturing responses.
- Added ui-banner.sh for rendering a user interface banner with information about the toolkit and its usage.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+camsniff (2.2.1) unstable; urgency=medium
+  * Move PORT_PROFILE_DATA and UI_HELPER to scripts/ for proper shellcheck sourcing.
+  * implemented new scanning features and bug fixes.
+  * Refactor script paths in analyze.sh and camsniff.sh for consistency
+  * Moved Python scripts that resided in camsniff.sh to scripts/ for better organization.
+  * 
+  * Add missing shellcheck disable directives to sourced UI scripts.
+  * Fix UI banner
+
+ -- John Hauger Mitander <john@on1.no>  Sat, 11 Oct 2025 01:00:00 +0000
+
 camsniff (2.2.0) unstable; urgency=medium
 
   * Overhaul extras UX with animated spinners, clearer banners, and quiet mode.
